# secret-engine

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  model.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
deploy/docker/: server.Dockerfile  web.Dockerfile
deploy/k8s/: namespace.yaml  postgres.yaml  secrets.example.yaml  server.yaml  web.yaml
docs/: architecture.md  development.md
migrations/: 0001_init.sql  0002_tokens.sql  0003_secret_versions.sql  0004_system_init.sql  0005_system_recovery.sql  0006_audit_events.sql  0007_policy_capabilities.sql  0008_encryption_keys.sql
web/: index.html  package.json
web/public/: config.js
web/src/: App.jsx  styles.css
