[package]
name = "secret-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
